Some style updates to fix dark mode.

--- a/app/src/components/LocalWeather/LocalWeather.scss
+++ b/app/src/components/LocalWeather/LocalWeather.scss
@@ -108,7 +108,6 @@ body.dark-mode .LocalWeather {
 
   input {
     background-color: #555;
-    letter-spacing: 0.7px;
     color: #fff;
 
     &::placeholder {
