--- a/app/src/components/Tabbed/Tabbed.scss
+++ b/app/src/components/Tabbed/Tabbed.scss
@@ -27,10 +27,6 @@
         }
       }
     }
-
-    .content {
-      border: 1px solid $borderColor;
-    }
 }
 
 
