--- a/app/src/components/WeatherDotGov/WeatherDotGov.scss
+++ b/app/src/components/WeatherDotGov/WeatherDotGov.scss
@@ -52,15 +52,11 @@
     background-color: #fff;
 
     .Chart {
-      height: 200px;
+      height: 250px;
   
       h4 {
         margin: 0;
       }
-    }
-
-    .Tabbed .content {
-      padding: 0 15px;
     }
   }
 
